2009-07-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.50

	memset several different MBWMObjects to zero to invalidate them
	properly when they are destroyed, this to avoid using the freed memory
	area. Hopefully fixes NB#129979.

	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_destroy):
	memset the object to zero before freeing it.
	* matchbox/core/mb-wm-decor.c (mb_wm_decor_destroy,
	mb_wm_decor_button_destroy): memset the object to zero before freeing
	it.
	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): memset the
	object to zero before freeing it.

2009-07-24  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c (icon_from_net_wm_icon): Put a
	200kB limit for icons. Use zero return value to tell about OOM or
	too big icon.
	(mb_wm_client_window_sync_properties): Bail out from the loop if
	icon_from_net_wm_icon returns zero. Hopefully fixes NB#129833

2009-07-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-main-context.h
	* matchbox/core/mb-wm-main-context.c:
	  Allow for KeyRelease event handlers.

2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>

	Resolves half of NB#127320 - desktop panning
	* matchbox/core/mb-wm-client-window.c: Remove the 'Monster Hack'. The
	original reason for this (browser visibility) appears to have gone 
	away, and this caused the desktop to be 799x479 (instead of 800x480)
	which meant that dragging right from the right-hand side of the
	screen failed to produce a mouse_pressed event on the desktop.

	* matchbox/core/mb-wm-types.h
        * matchbox/core/mb-wm-atoms.c
	* matchbox/core/mb-wm-client.c: For RGBA sapwood - look for 
	MAEMO_IGNORE_ALPHA window property, and only ignore alpha if so.
	Reverts previous change in order to handle alpha in a more compatible
	way.

2009-07-22  Gordon Williams <gordon.williams@collabora.co.uk>

	Changes to help with RGBA sapwood - disable alpha (transparency) 
	channel for apps and dialogs.
